Agregue suscripcion, cambie la cabecera maestra y puse todo azul

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,8 +7,8 @@
         <div id="container">
             <div id="cabecera">
                 Hiperblog
-                <span id="taglinea">Tu blog de 
-                confianza</span>
+                <span id="taglinea">Tu blog
+                maestro</span>
             </div>
             <div id="post">
                 <h1>Este es el titulo atractivo e 
@@ -25,6 +25,7 @@
                         un rockstar. Pero estadisticamente no lo
                         eres....por ahora
                     </p>
+                    <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
